--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -55,6 +55,27 @@
           </div>
 
           <div class="form-group">
+            <%= f.label :name, class: "col-sm-2 control-label" %>
+            <div class="col-sm-10">
+              <%= f.text_field :name, :class => "form-control", :placeholder => "Enter name" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :city_id, class: "col-sm-2 control-label" %>
+            <div class="col-sm-10">
+              <%= f.number_field :city_id, :class => "form-control", :placeholder => "Enter city id" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :avg_rating, class: "col-sm-2 control-label" %>
+            <div class="col-sm-10">
+              <%= f.text_field :avg_rating, :class => "form-control", :placeholder => "Enter avg rating" %>
+            </div>
+          </div>
+
+          <div class="form-group">
             <div class="col-sm-10 col-sm-offset-2">
               <%= f.submit "Update", class: "btn btn-success btn-block" %>
             </div>
