--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,8 +51,31 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/users/edit">Dummy Edit Profile Link</a></li>
-          <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Dummy Sign Out Link</a></li>
+          <% if current_restaurant.present? %>
+            <li>
+              <a href="/restaurants/edit">
+                <%= current_restaurant.username %>
+              </a>
+            </li>
+
+            <li>
+              <a href="/restaurants/sign_out" data-method="delete" rel="nofollow">
+                Sign Out
+              </a>
+            </li>
+          <% else %>
+            <li>
+              <a href="/restaurants/sign_up">
+                Sign Up
+              </a>
+            </li>
+
+            <li>
+              <a href="/restaurants/sign_in">
+                Sign In
+              </a>
+            </li>
+          <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div>
